syntax = "proto3";
package isuxportal.proto.resources;
option go_package = "github.com/isucon/isucon10-portal/proto.go/isuxportal/resources";

message Contestant {
  int64 id = 1;
  int64 team_id = 2;
  string name = 3;
  message ContestantDetail {
    string github_login = 1;
    string discord_tag = 2;
    bool is_student = 3;
    string avatar_url = 4;

    string github_id = 16;
    string discord_id = 17;
  }
  ContestantDetail contestant_detail = 7; // FIXME: rename to "detail"
}
